--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port=3000",
+    "deploy": "npm run build && gh-pages -d dist",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "gh-pages": "^6.1.1",
     "vite": "^5.4.1"
   }
 }
